styles/base.css
:root {
    --main-color: #759090;
    --secondary-color: #fef6dd;
    --tertiary-color: #b99c8b;
    --yellow-horse: #fff1b5;
    --green-thumb: #7c8377;
}

/*-----------BODY------------*/
body {
    margin: 0;
    padding: 0;
}

/*-----------HEADER------------*/

header {
    display: grid;
    grid-template-columns: 24px auto 44px;
    padding: 5px 0 5px 10px;
    align-items: end;
    background-color: var(--main-color);
    border-bottom: solid 1px #ddd;
    column-gap: 8px;
}

header img {
    display: block;
    width: 100%;
    height: auto;
}

header span {
    font-size: 1.2rem;
    color: white;
}

/*-----------HAMBURGER------------*/

.hamburger {
    background: none;
    border: none;
    cursor: pointer;
}

.hamburger::before {
    content: "\2630";
    font-size: 2rem;
    color: white;
}

.hamburger.show::before {
    content: "\00D7";
    color: white;
}

/*-----------NAV------------*/
.navigation {
    display: none;
}

.navigation.show {
    display: block;
}

.navigation ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    justify-content: space-evenly;
}

.navigation a {
    display: block;
    padding: .8rem 10px;
    color: black;
    text-decoration: none;
}

.current {
    background-color: #eee;
}

.navigation a:hover {
    background-color: #ddd;
}

h1 {
    padding: .5rem;
    margin: 0;
    text-align: center;
}

/*-----------MAIN------------*/
main {
    background-color: #eee;
}

h2 {
    margin-left: 10px;
    padding: .3rem;
    margin: 0;
    background-color: #759090;
    color: white;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    text-align: center;
}

/*-----------CARDS------------*/

.about-me p {
    text-align: center;
    padding: 1.7rem;
}

.about-me {
    background-color: #ddd;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.my-picture {
    background-color: #ddd;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.my-picture img {
    display: block;
    margin: 0 auto;
    padding-top: .5rem;
    padding-bottom: .5rem;
}

/*-----------FOOTER------------*/
footer {
    background-color: var(--main-color);
    padding: 1rem 10px;
    text-align: center;
}

.social {
    display: flex;
    justify-content: center;
    column-gap: 8px;
}

.social a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 44px;
    height: 44px;
}

.social img {
    width: 22px;
    height: 22px;
}

.social a:hover {
    background-color: #ddd;
}

footer span,
footer p {
    color: white;
}

